--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
      <head>
     	 <meta charset="utf-8">
 	     <link rel="stylesheet" type="text/css" href="./style.css">
-	     <title>LOIC ANAEL - Carnet de voyage</title>
+	     <title>LoicAnael - Carnet de voyage</title>
      </head>
 
      <body>
