--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h1>Mes Amis</h1>
                     <div id="liste_amis">
                         <ul>
-                        	<li><a href="#">Kouassu Guy Stephane</a></li>
+                        	<li><a href="#">Guy Stephane</a></li>
                             <li><a href="#">Kenneth Ngu</a></li>
                             <li><a href="#">Dongmo Ricardo</a></li>
                             <li><a href="#">Jean-Claude</a></li>
